force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Designation for the employee</description>
    <inlineHelpText>Choose appropriate designation of employee</inlineHelpText>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>