force-app/main/default/objects/Employee__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <description>Email id of the employee</description>
    <inlineHelpText>Email address for the employee.</inlineHelpText>
    <label>Email Id</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>