force-app/main/default/objects/Employee__c/fields/Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Id__c</fullName>
    <description>Employee id</description>
    <displayFormat>Emp-{00000}</displayFormat>
    <inlineHelpText>Employee unique id</inlineHelpText>
    <label>Emp Id</label>
    <type>AutoNumber</type>
</CustomField>